; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_os_freebsd.c_drm_linux_timer_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_os_freebsd.c_drm_linux_timer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@drm_linux_timer_hz_mask = common dso_local global i64 0, align 8
@hz = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @drm_linux_timer_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_linux_timer_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i64 1, i64* @drm_linux_timer_hz_mask, align 8
  br label %3

3:                                                ; preds = %7, %1
  %4 = load i64, i64* @drm_linux_timer_hz_mask, align 8
  %5 = load i64, i64* @hz, align 8
  %6 = icmp ult i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %3
  %8 = load i64, i64* @drm_linux_timer_hz_mask, align 8
  %9 = mul i64 %8, 2
  store i64 %9, i64* @drm_linux_timer_hz_mask, align 8
  br label %3

10:                                               ; preds = %3
  %11 = load i64, i64* @drm_linux_timer_hz_mask, align 8
  %12 = add i64 %11, -1
  store i64 %12, i64* @drm_linux_timer_hz_mask, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
